puck_liveview/src/dom/element/diff/snapshots/puck_liveview__dom__element__diff__test__more_complex_diff.snap
---
source: puck_liveview/src/dom/element/diff/test.rs
expression: c

---
Changeset {
    ops: [
        Op {
            id: "0-2-",
            instruction: CreateTag {
                name: "div",
                parent_id: Some(
                    "0-",
                ),
            },
        },
        Op {
            id: "0-2-",
            instruction: SetAttribute {
                key: "class",
                value: "message-container",
            },
        },
        Op {
            id: "0-2-0-",
            instruction: CreateTag {
                name: "p",
                parent_id: Some(
                    "0-2-",
                ),
            },
        },
        Op {
            id: "0-2-0-",
            instruction: SetAttribute {
                key: "class",
                value: "message-sent-at",
            },
        },
        Op {
            id: "0-2-0-",
            instruction: SetText {
                value: "1970-01-25 06:34:13",
            },
        },
        Op {
            id: "0-2-1-",
            instruction: CreateTag {
                name: "p",
                parent_id: Some(
                    "0-2-",
                ),
            },
        },
        Op {
            id: "0-2-1-",
            instruction: SetAttribute {
                key: "class",
                value: "message-author",
            },
        },
        Op {
            id: "0-2-1-",
            instruction: SetText {
                value: "[username not set]",
            },
        },
        Op {
            id: "0-2-2-",
            instruction: CreateTag {
                name: "p",
                parent_id: Some(
                    "0-2-",
                ),
            },
        },
        Op {
            id: "0-2-2-",
            instruction: SetAttribute {
                key: "class",
                value: "message-contents",
            },
        },
        Op {
            id: "0-2-2-",
            instruction: SetText {
                value: "sending message",
            },
        },
    ],
}
