puck_liveview/src/dom/element/diff/snapshots/puck_liveview__dom__element__diff__test__test_add_child_before_change.snap
---
source: puck_liveview/src/dom/element/diff/test.rs
expression: c

---
Changeset {
    ops: [
        Op {
            id: "0-0-",
            instruction: SetId {
                value: "0-1-",
            },
        },
        Op {
            id: "0-0-",
            instruction: InsertBefore {
                before_id: "0-1-",
            },
        },
    ],
}
