puck_liveview/src/dom/element/diff/snapshots/puck_liveview__dom__element__diff__test__test_add_child_change.snap
---
source: puck_liveview/src/dom/element/diff/test.rs
expression: c

---
Changeset {
    ops: [
        Op {
            id: "0-1-",
            instruction: InsertAfter {
                after_id: "0-0-",
            },
        },
    ],
}
