puck_liveview/src/dom/element/diff/snapshots/puck_liveview__dom__element__diff__test__test_single_element_attribute_change.snap
---
source: puck_liveview/src/dom/element/diff/test.rs
expression: cs

---
Changeset {
    ops: [
        Op {
            id: "0-",
            instruction: SetAttribute {
                key: "class",
                value: "two",
            },
        },
        Op {
            id: "0-",
            instruction: SetAttribute {
                key: "new-attribute-added-after-diffing",
                value: "value",
            },
        },
    ],
}
